# patmos-compiler-rt

./: .gitignore  CMakeLists.txt  README.md  README.patmos
cmake/: patmos-clang-toolchain.cmake
cmake/Platform/: patmos.cmake
lib/: CMakeLists.txt  adddf3.c  addsf3.c  divdf3.c  divsf3.c  endianness.h  fp_lib.h  int_endianness.h  muldf3.c  mulsf3.c
lib/patmos/: Makefile  README  clzsi2.c  ctzsi2.c  getdecls.sh  getdecls.sh.in  initfpu.c  initfpu.h  libcsyms.ll  libcsyms.ll.in  libllsyms.ll  libmsyms.ll  libmsyms.ll.in  markused.sh  udivmodsi4.c  udivsi3.c
lib/patmos/wcet_oriented/: udivsi3.c
